<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_vet_clinics"
        android:icon="@drawable/ic_vet"
        android:title="@string/vet_clinics" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_care_guide"
        android:icon="@drawable/ic_guide"
        android:title="@string/pet_care_guide" />
    <item
        android:id="@+id/navigation_disease_analysis"
        android:icon="@drawable/ic_disease_analysis"
        android:title="Hastalık Analizi" />
</menu> 